name:                pi-montecarlo
version:             1.0.0.0
homepage:            https://github.com/runjak/vala_benchmark
license:             OtherLicense
license-file:        ../../LICENSE
author:              Jakob Runge
maintainer:          sicarius@g4t3.de
category:            Microbenchmark
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable pi-montecarlo
  main-is:           Pi.hs
  build-depends:
      base >=4.10 && <4.11
    , mersenne-random >= 1.0.0.1
  default-language:  Haskell2010
  ghc-options: -Wall -O2
